| Summary: | ASTERISK-29746: tcptls.c: TCP client connect fails due to interrupt | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2021-11-15 16:06:41.000-0600 | Date Closed: | 2022-01-05 09:40:53.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The TCP client connect does not handle the interrupt case (EINTR), thus can easily fail to connect when there is no real connection error.
Also the underlying iostream is set to not wait/poll on reads, thus similarly reading can inadvertently fail. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-01-05 09:40:54.703-0600 Change 17722 merged by Friendly Automation: tcptls.c: refactor client connection to be more robust [https://gerrit.asterisk.org/c/asterisk/+/17722|https://gerrit.asterisk.org/c/asterisk/+/17722] By: Friendly Automation (friendly-automation) 2022-01-05 09:41:24.603-0600 Change 17720 merged by Joshua Colp: tcptls.c: refactor client connection to be more robust [https://gerrit.asterisk.org/c/asterisk/+/17720|https://gerrit.asterisk.org/c/asterisk/+/17720] By: Friendly Automation (friendly-automation) 2022-01-05 09:41:37.095-0600 Change 17721 merged by Joshua Colp: tcptls.c: refactor client connection to be more robust [https://gerrit.asterisk.org/c/asterisk/+/17721|https://gerrit.asterisk.org/c/asterisk/+/17721] By: Friendly Automation (friendly-automation) 2022-01-05 09:49:01.081-0600 Change 17472 merged by George Joseph: tcptls.c: refactor client connection to be more robust [https://gerrit.asterisk.org/c/asterisk/+/17472|https://gerrit.asterisk.org/c/asterisk/+/17472] | ||